--- a/app/src/main/res/menu/menu_product.xml
+++ b/app/src/main/res/menu/menu_product.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/item_menu_order_history"
-        android:icon="@drawable/ic_order_history"
+        android:icon="@drawable/ic_history"
         android:title="History Order"
         app:showAsAction="always" />
 
