--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -31,14 +31,15 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_history_empty"
+        android:id="@+id/layout_cart_empty"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar_home"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="visible"
+        tools:visibility="gone"
+        android:visibility="gone"
         >
 
         <TextView
@@ -47,12 +48,12 @@
             android:text="Seem like your cart is empty"
             android:textSize="24sp"
             android:layout_marginBottom="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/image_view_empty_history"
+            app:layout_constraintBottom_toTopOf="@+id/image_view_empty_cart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/image_view_empty_history"
+            android:id="@+id/image_view_empty_cart"
             android:layout_width="200dp"
             android:layout_height="300dp"
             android:src="@drawable/image_empty_cart"
@@ -73,7 +74,7 @@
             android:paddingVertical="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_view_empty_history">
+            app:layout_constraintTop_toBottomOf="@+id/image_view_empty_cart">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -87,7 +88,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_order_detail"
+        android:id="@+id/layout_cart_detail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
@@ -95,15 +96,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="visible"
         android:visibility="gone"
         >
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_View_history"
+            android:id="@+id/recycler_View_cart"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/total_price_are"
+            app:layout_constraintBottom_toTopOf="@id/total_price_area"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -111,14 +113,14 @@
             tools:listitem="@layout/layout_cart_item" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/total_price_are"
+            android:id="@+id/total_price_area"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:layout_marginHorizontal="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recycler_View_history"
+            app:layout_constraintTop_toBottomOf="@id/recycler_View_cart"
             app:layout_constraintBottom_toTopOf="@id/button_confirm_order"
             >
 
