--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -38,7 +38,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="visible"
+        tools:visibility="visible"
+        android:visibility="gone"
         >
 
         <TextView
@@ -90,6 +91,7 @@
         android:id="@+id/layout_order_detail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        tools:visibility="gone"
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_home"
         app:layout_constraintBottom_toBottomOf="parent"
