--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -88,7 +88,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_order_detail"
+        android:id="@+id/layout_history_detail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:visibility="visible"
@@ -101,7 +101,8 @@
             android:id="@+id/detail_text_area"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="12dp"
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="15dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -109,11 +110,11 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/text_view_title"
+                android:id="@+id/text_view_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Number"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/text_view_time"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -126,19 +127,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Time"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/text_view_unit_price"
+                app:layout_constraintEnd_toStartOf="@+id/text_view_order_price"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/text_view_title"
+                app:layout_constraintStart_toEndOf="@+id/text_view_number"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/text_view_unit_price"
+                android:id="@+id/text_view_order_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Total Price"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -148,7 +149,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_View_history"
+            android:id="@+id/recycler_view_history"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
