--- a/app/src/main/res/layout/activity_history_detail.xml
+++ b/app/src/main/res/layout/activity_history_detail.xml
@@ -31,7 +31,6 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_history_empty"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar_home"
@@ -87,7 +86,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_order_detail"
+        android:id="@+id/layout_history_detail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="visible"
@@ -106,7 +105,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/text_view_title"
+                android:id="@+id/text_view_number"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 tools:text="Order detail"
@@ -127,7 +126,7 @@
                 android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_title" />
+                app:layout_constraintTop_toBottomOf="@id/text_view_number" />
 
             <TextView
                 android:id="@+id/text_view_total_order_price"
