--- a/app/src/main/res/layout/layout_history_item.xml
+++ b/app/src/main/res/layout/layout_history_item.xml
@@ -20,11 +20,11 @@
         >
 
         <TextView
-            android:id="@+id/text_view_title"
+            android:id="@+id/text_view_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="1"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/text_view_time"
@@ -38,19 +38,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="17:52:29, 23/11/2024"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/text_view_unit_price"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_order_price"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/text_view_title"
+            app:layout_constraintStart_toEndOf="@+id/text_view_number"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/text_view_unit_price"
+            android:id="@+id/text_view_order_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="110,000 VND"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
