--- a/app/src/main/res/layout/activity_history_detail.xml
+++ b/app/src/main/res/layout/activity_history_detail.xml
@@ -31,65 +31,11 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_home"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="gone"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your order history is empty"
-            android:textSize="24sp"
-            android:layout_marginBottom="30dp"
-            app:layout_constraintBottom_toTopOf="@+id/image_view_empty_history"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-            android:id="@+id/image_view_empty_history"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:src="@drawable/image_empty_history"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <LinearLayout
-            android:id="@+id/button_view_product_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:background="@drawable/background_button_corner_primary"
-            android:gravity="center"
-            android:paddingHorizontal="20dp"
-            android:layout_marginTop="30dp"
-            android:paddingVertical="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_view_empty_history">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="View product list"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_history_detail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="visible"
+        tools:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_home"
         app:layout_constraintBottom_toBottomOf="parent"
         >
@@ -105,10 +51,10 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/text_view_number"
+                android:id="@+id/text_view_bill_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                tools:text="Order detail"
+                android:text="Order detail"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 android:gravity="center"
@@ -117,30 +63,30 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/text_view_time"
+                android:id="@+id/text_view_bill_time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                tools:text="17:52:29 - 23/11/2024"
+                tools:text="17:52:29 | 23/11/2024"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_number" />
+                app:layout_constraintTop_toBottomOf="@id/text_view_bill_title" />
 
             <TextView
-                android:id="@+id/text_view_total_order_price"
+                android:id="@+id/text_view_total_bill_price"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button_rounded_corner_black_stroke"
                 tools:text="Total bill: 200,000 VND"
                 android:layout_marginTop="10dp"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 android:textStyle="bold"
                 android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text_view_time" />
+                app:layout_constraintTop_toBottomOf="@id/text_view_bill_time" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -151,6 +97,8 @@
             android:layout_marginHorizontal="5dp"
             android:layout_marginVertical="5dp"
             android:orientation="horizontal"
+            tools:visibility="visible"
+            android:visibility="gone"
             android:background="@drawable/background_button_square_corner_black_grey_stroke"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -161,10 +109,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 android:padding="5dp"
-                tools:text="Product"
+                android:text="Product"
                 android:gravity="center"/>
 
             <TextView
@@ -172,10 +120,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 android:padding="5dp"
-                tools:text="Quantity"
+                android:text="Quan"
                 android:gravity="center"/>
 
             <TextView
@@ -183,10 +131,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 android:padding="5dp"
-                tools:text="Price"
+                android:text="Price"
                 android:gravity="center"/>
 
             <TextView
@@ -194,16 +142,16 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 android:padding="5dp"
-                tools:text="Total"
+                android:text="Total"
                 android:gravity="center"/>
 
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_View_history_order_detail"
+            android:id="@+id/recycler_view_history_detail"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
@@ -212,7 +160,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bill_column_area"
-            tools:listitem="@layout/layout_order_detail_item" />
+            tools:listitem="@layout/layout_history_detail_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
