--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/toolbar_home"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/primary"
+                android:background="@color/white"
                 app:contentInsetEnd="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -32,9 +32,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Product Detail"
+                    android:text="Chi tiết món ăn"
                     android:textStyle="bold"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey"
                     android:textSize="24sp"
                     />
 
@@ -92,7 +92,7 @@
                 <LinearLayout
                     android:id="@+id/button_add_to_cart"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/background_button_corner_primary"
                     android:gravity="center"
@@ -101,7 +101,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Add to cart"
+                        android:text="Thêm vào giỏ hàng"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:textColor="@color/white" />
