--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primary"
+        android:background="@color/white"
         app:contentInsetEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,9 +22,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Your Cart"
+            android:text="Giỏ hàng"
             android:textStyle="bold"
-            android:textColor="@color/white"
+            android:textColor="@color/grey"
             android:textSize="24sp"
             />
 
@@ -45,8 +45,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Seem like your cart is empty"
+            android:text="Giỏ hàng của bạn đang trống"
             android:textSize="24sp"
+            android:textStyle="bold"
             android:layout_marginBottom="30dp"
             app:layout_constraintBottom_toTopOf="@+id/image_view_empty_cart"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +80,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="View product list"
+                android:text="Xem danh sách món"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="20sp" />
@@ -128,7 +129,7 @@
                 android:id="@+id/text_view_total_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total price:"
+                android:text="Tổng tiền:"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -166,7 +167,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Confirm order"
+                android:text="Xác nhận đơn hàng"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@color/white" />
