--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primary"
+        android:background="@color/white"
         app:contentInsetEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,9 +22,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Your Order History"
+            android:text="Lịch sử đặt hàng"
             android:textStyle="bold"
-            android:textColor="@color/white"
+            android:textColor="@color/grey"
             android:textSize="24sp"
             />
 
@@ -45,8 +45,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your order history is empty"
+            android:text="Lịch sử đặt hàng của bạn đang trống"
             android:textSize="24sp"
+            android:textStyle="bold"
             android:layout_marginBottom="30dp"
             app:layout_constraintBottom_toTopOf="@+id/image_view_empty_history"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +80,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="View product list"
+                android:text="Xem danh sách món"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="20sp" />
@@ -113,7 +114,7 @@
                 android:id="@+id/text_view_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Number"
+                android:text="STT"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/text_view_bill_time"
@@ -126,7 +127,7 @@
                 android:id="@+id/text_view_bill_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time"
+                android:text="Thời gian"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/text_view_order_price"
@@ -138,7 +139,7 @@
                 android:id="@+id/text_view_order_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total Price"
+                android:text="Tổng tiền"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
