--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="15dp"
-        android:hint="Email"
+        android:hint="Tài khoản"
         android:textColorHint="@color/primary"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="15dp"
-        android:hint="Password"
+        android:hint="Mật khẩu"
         android:textColorHint="@color/primary"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
@@ -93,7 +93,7 @@
             android:id="@+id/sign_in_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Log In"
+            android:text="Đăng nhập"
             android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -108,7 +108,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_sign_in"
         app:layout_constraintVertical_bias="0.85"
-        tools:text="Don't have an account? Sign up here" />
+        tools:text="Bạn chưa có tài khoản? Đăng ký tại đây" />
 
     <include
         android:id="@+id/layout_loading"
