--- a/app/src/main/res/layout/layout_history_detail_item.xml
+++ b/app/src/main/res/layout/layout_history_detail_item.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardElevation="10dp"
+    app:cardCornerRadius="10dp"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginVertical="8dp"
     >
 
     <LinearLayout
@@ -12,7 +16,6 @@
         android:layout_marginHorizontal="5dp"
         android:orientation="horizontal"
         android:layout_marginBottom="5dp"
-        android:background="@drawable/background_button_square_corner_black_grey_stroke"
         >
 
         <TextView
@@ -59,4 +62,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
