--- a/app/src/main/res/layout/layout_product_item_grid.xml
+++ b/app/src/main/res/layout/layout_product_item_grid.xml
@@ -6,21 +6,22 @@
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="8dp"
-    android:layout_width="match_parent"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     app:cardCornerRadius="10dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:padding="5dp"
+        >
 
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view_product"
             android:layout_width="0dp"
-            android:layout_height="120dp"
+            android:layout_height="0dp"
             android:elevation="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1.2:1"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -33,6 +34,8 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 tools:src="@drawable/ic_logo" />
+
+
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -42,91 +45,67 @@
             android:layout_marginStart="5dp"
             android:ellipsize="end"
             android:maxLines="2"
-            android:paddingLeft="5dp"
-            android:textColor="#f20"
+            android:textColor="@color/ic_launcher_background"
             android:textSize="15sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/text_view_product_address"
-            app:layout_constraintLeft_toRightOf="@id/card_view_product"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="spread_inside" />
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/card_view_product"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Tên món ăn" />
 
         <TextView
             android:id="@+id/text_view_product_address"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="12dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingLeft="5dp"
             android:textColor="#8A8A8A"
             android:textSize="13sp"
-            app:layout_constraintBottom_toTopOf="@id/text_view_product_price"
-            app:layout_constraintLeft_toRightOf="@id/card_view_product"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_view_product_name" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_product_name"
+            tools:text="Địa chỉ" />
 
         <TextView
             android:id="@+id/text_view_product_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="24dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:paddingLeft="5dp"
             android:textColor="#040404"
-            android:textSize="12sp"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toTopOf="@id/button_area_event"
-            app:layout_constraintLeft_toRightOf="@id/card_view_product"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_view_product_address" />
+            android:textSize="16sp"
+            android:textStyle="italic | bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_product_address"
+            tools:text="30,000 VND" />
 
         <LinearLayout
             android:id="@+id/button_area_event"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:gravity="center"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/card_view_product"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_view_product_price">
+            app:layout_constraintEnd_toEndOf="parent">
 
             <LinearLayout
                 android:id="@+id/button_add_product"
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="50dp"
                 android:background="@drawable/background_button_corner_primary"
                 android:gravity="center"
-                android:paddingHorizontal="20dp"
                 android:paddingVertical="5dp">
 
-                <TextView
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Thêm"
-                    android:textColor="@color/white" />
+                    android:src="@drawable/ic_add_white"
+                    />
             </LinearLayout>
 
-
-            <LinearLayout
-                android:id="@+id/button_detail_product"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/background_button_corner_purple"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="5dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Chi tiết"
-                    android:textColor="@color/white" />
-            </LinearLayout>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
