--- a/app/src/main/res/layout/activity_history_detail.xml
+++ b/app/src/main/res/layout/activity_history_detail.xml
@@ -77,11 +77,12 @@
             <TextView
                 android:id="@+id/text_view_total_bill_price"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/background_button_rounded_corner_black_stroke"
+                android:layout_height="35dp"
+                android:background="@drawable/background_button_corner_primary"
                 tools:text="Tổng tiền: 200,000 VND"
                 android:layout_marginTop="10dp"
                 android:textSize="22sp"
+                android:textColor="@color/white"
                 android:textStyle="bold"
                 android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
