--- a/app/src/main/res/layout/layout_history_detail_item.xml
+++ b/app/src/main/res/layout/layout_history_detail_item.xml
@@ -7,7 +7,7 @@
     app:cardElevation="10dp"
     app:cardCornerRadius="10dp"
     android:layout_marginHorizontal="8dp"
-    android:layout_marginVertical="8dp"
+    android:layout_marginBottom="8dp"
     >
 
     <LinearLayout
